# aios

./: .gitignore  README.md  pyproject.toml
benchmark/: bench.py
python/aios/: __init__.py  __main__.py  core.py
python/aios/attention/: __init__.py  base.py  flashinfer.py
python/aios/engine/: __init__.py  engine.py  kv_cache.py  sample.py
python/aios/kernel/: __init__.py  store.py
python/aios/kvcache/: __init__.py  base.py  dynamic.py  mha_pool.py
python/aios/layers/: __init__.py  activation.py  attention.py  base.py  embedding.py  linear.py  norm.py  (+1 more)
resources/lesson-0-introduction/: README.md  README_CN.md  slides_cn.md
resources/lesson-1-llm-basics/: README.md  README_CN.md
resources/lesson-2-run-qwen3/: README.md  run_qwen3.py
resources/lesson-3-refactor-to-package/: README.md
resources/lesson-4-kv-cache/: README.md  README_CN.md  visualize.py
resources/lesson-4-kvcache/: kv-cache-guide.md
resources/lesson-5-paged-kv-cache/: README.md  README_CN.md  cache_comparison.dot  dynamic_kv_cache.dot  os_paging_memory.dot  paged_kv_architecture_aios.dot  paged_kv_cache.dot  paged_kv_cache_decode.dot  paged_kv_cache_prefill.dot  preallocated_kv_cache.dot  run_lesson5.py
resources/lesson-6-paged-kv-cache/: EXPLANATION_ZH.md  README.md  run_lesson6.py
resources/lesson-6-static-batching/: TECHNICAL_CN.md
resources/lesson-8-flat-varlen-prefill/: README_CN.md  run_lesson8.py
resources/lesson-9-fused-layers/: README_CN.md  merged_projection_layouts.excalidraw  operator_fusion_principle.excalidraw  residual_fusion_op_graph.excalidraw  run_lesson9.py
(+22 files in other folders)
